--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="utils" basedir="." default="buildAll">
-    <property name="APP_NAME" value="utils"/>
+<project name="checkdigit" basedir="." default="buildAll">
+    <property name="APP_NAME" value="checkdigit"/>
     <property name="APP_ROOT" value="${project.basedir}"/>
     <property name="SRC_DIR" value="${APP_ROOT}/src"/>
     <property name="TEST_DIR" value="${APP_ROOT}/tests"/>
