--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: php
 
 php:
-    - hhvm
-    - 5.6
-    - 5.5
-    - 5.4
+  - hhvm
+  - 5.6
+  - 5.5
+  - 5.4
+
+install:
+  - composer install --dev --prefer-source
 
 script:
-    - phpunit
+  - phpunit --coverage-clover clover.xml
+
+after_script:
+  - php vendor/bin/coveralls
