--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "require": {
         "php": ">=5.4",
         "ext-bcmath": "*"
+    },
+    "require-dev": {
+        "satooshi/php-coveralls": "<2.0"
     }
 }
