--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,10 @@ php:
   - 5.5
   - 5.4
 
-install:
-  - composer install --dev --prefer-source
-
-befor_script:
-  - composer require satooshi/php-coveralls
-  - mkdir -p build/logs
-
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '5.6' ]]; then phpunit ; fi
 
 after_script:
-  - php vendor/bin/coveralls
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover ; fi
