--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,6 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/CHANGES.md export-ignore
-/CONTRIBUTING.md export-ignore
+/CHANGELOG.md export-ignore
 /README.md export-ignore
 /phpunit.xml.dist export-ignore
