--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,9 @@
     "require": {
         "php": ">=7.0",
         "ext-bcmath": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6",
+        "hanneskod/readme-tester": "1.0-beta.3"
     }
 }
